[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ykutil"
dynamic = ["version"]
dependencies = [
  "tqdm"
]
requires-python = ">= 3.10"
authors = [
  {name = "Yannik Keller", email = "yannik@kelnet.de"},
]
description = "A continuously updates repository of utility functions."
readme = "README.md"
license = {text = "MIT License"}
keywords = ["util"]
[project.optional-dependencies]
all = ["torch", "transformer_heads", "transformers", "peft", "bitsandbytes", "accelerate", "openai", "pandera", "datasets"]
[tool.hatch.version]
path = "ykutil/__init__.py"
[project.scripts]
describe_dataset = "ykutil.executable:do_describe_dataset"
tokenize = "ykutil.executable:do_tokenize"
untokenize = "ykutil.executable:do_untokenize"
colorcode_ds = "ykutil.executable:do_colorcode_dataset"
beautify_json = "ykutil.executable:do_beautify_json"
bulk_rename = "ykutil.executable:do_bulk_rename"